cargo-features = ["edition2024"]
[package]
name = "xnav"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
http = "1.1.0"
hyper = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = { version = "0.7", features = ["full"] }
toml = "0.8.14"
serde_json = "1.0"
http-body-util = "0.1.2"
async-tls = "0.10"
